group = 'com.nablarch.framework'
version = '1.2.1'
description = 'jBatch(JSR352)に準拠したバッチ処理方式を実現する'

buildscript {
  repositories {
    mavenLocal()
    maven { url "${developLibUrl}" }
    jcenter()
  }
  dependencies {
    classpath "com.nablarch.dev:nablarch-gradle-plugin:${nablarchGradlePluginVersion}"
    classpath "net.saliman:gradle-cobertura-plugin:${coberturaPluginVersion}"
  }
}
apply plugin: 'com.nablarch.dev.nablarch-build'
apply plugin: 'com.nablarch.dev.nablarch-maven-deploy'
apply plugin: 'com.nablarch.dev.nablarch-sonarqube'
apply plugin: 'com.nablarch.dev.nablarch-version'
apply from: 'https://github.com/nablarch/nablarch-gradle-plugin/blob/develop/scripts/cobertura/cobertura-0.0.1.gradle?raw=true'

// ビルド時のJavaバージョンを指定する
sourceCompatibility=JavaVersion.VERSION_1_6
targetCompatibility=JavaVersion.VERSION_1_6

configurations {
  all*.exclude module: 'servlet-api'
}

dependencies {
  // jBatch api
  provided 'javax.batch:javax.batch-api:1.0'
  provided 'javax.inject:javax.inject:1'
  provided 'javax.enterprise:cdi-api:1.1'

  // nablarch
  compile "com.nablarch.framework:nablarch-core-repository:${nablarchCoreRepositoryVersion}"
  compile "com.nablarch.framework:nablarch-core-applog:${nablarchCoreApplogVersion}"
  compile "com.nablarch.framework:nablarch-core-transaction:${nablarchCoreTransactionVersion}"
  compile "com.nablarch.framework:nablarch-common-dao:${nablarchCommonDaoVersion}"
  compile "com.nablarch.framework:nablarch-fw-batch:${nablarchFwBatchVersion}"

  // jdbc
  compile "com.nablarch.framework:nablarch-common-jdbc:${nablarchCommonJdbcVersion}"

  // test api
  testCompile 'org.jmockit:jmockit:1.13'
  testCompile 'junit:junit:4.12'
  testCompile 'org.hamcrest:hamcrest-all:1.3'
  testCompile 'com.nablarch.dev:nablarch-test-support:0.0.5'
  testCompile 'com.nablarch.integration:nablarch-slf4j-adaptor:1.0.0'

  testCompile 'com.h2database:h2:1.4.187'
  testCompile 'com.github.stefanbirkner:system-rules:1.16.0'

  testCompile 'org.glassfish.main.extras:glassfish-embedded-all:4.1'
  testCompile 'org.jboss.arquillian.junit:arquillian-junit-container:1.0.0.Final'
  testCompile 'org.jboss.arquillian.container:arquillian-glassfish-embedded-3.1:1.0.0.CR4'
  testCompile 'org.slf4j:jul-to-slf4j:1.7.22'
  testCompile 'ch.qos.logback:logback-classic:1.1.9'
  testRuntime 'log4j:log4j:1.2.17'
}

test {

  jvmArgs (
          '-XX:MaxPermSize=256m',
          '-Xmx512m',
          '-Dfile.encoding=UTF-8',
          '-XX:-UseSplitVerifier'
  )

  ignoreFailures = true
}

tasks.sonarRunner {
  dependsOn = ['coverage']
}

task wrapper(type: Wrapper) {
  gradleVersion = '2.13'
}

apply from: 'run-batch-application.gradle'
